--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,9 @@
+
 {
   "extends": "next/core-web-vitals",
   "rules": {
-    "react/no-unescaped-entities": 0,
-    "@next/next/no-img-element": "off",
-    "react/jsx-key": "warn"
+    "react/no-unescaped-entities": "off",
+    "@next/next/no-page-custom-font": "off"
   }
 }
+
