--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "yup": "^1.1.1"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.1"
   }
 }
